2004-01-06  David Trowbridge <trowbrds@cs.colorado.edu>

	* Initial import of weather properties plugin