@@ -1,3 +1,8 @@
+2005-01-07  Rodrigo Moya <rodrigo@novell.com>
+
+	* Makefile.am: define weatherdatadir here, no need to use e-d-s's one,
+	use evolution's instead.
+
 2004-01-06  David Trowbridge <trowbrds@cs.colorado.edu>
 
 	* Initial import of weather properties plugin
